--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,5 +50,5 @@ jobs:
         run: >
           aws deploy create-deployment --application-name be-16-ahyoung227
           --deployment-config-name CodeDeployDefault.AllAtOnce
-          --deployment-group-name be-16-ahyoung227
+          --deployment-group-name be-16-ahyoung227-group
           --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=practice-deploy.zip
